--- a/.github/workflows/Update Submodule Reference.yml
+++ b/.github/workflows/Update Submodule Reference.yml
@@ -21,11 +21,17 @@ jobs:
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
 
-    - name: Update Submodule Reference
+    - name: Initialize and Update Submodule
       run: |
         cd main-repo
+        # Initialize the submodule
+        git submodule update --init Coverage
         # Ensure the submodule points to the latest commit in the submodule repository
         git submodule update --remote --merge Coverage
+
+    - name: Commit and Push Updated Submodule Reference
+      run: |
+        cd main-repo
         git add Coverage
-        git commit -m "Update submodule reference to latest commit in PropertyGridHelpers.CodeCoverage"
+        git commit -m "Update submodule reference to latest commit in PropertyGridHelpers.CodeCoverage" || echo "No changes to commit"
         git push origin master
