--- a/.github/workflows/Update Submodule Reference.yml
+++ b/.github/workflows/Update Submodule Reference.yml
@@ -37,4 +37,4 @@ jobs:
         cd main-repo
         git add Coverage
         git commit -m "Update submodule reference to latest commit in PropertyGridHelpers.CodeCoverage" || echo "No changes to commit"
-        git push origin master
+        git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/dparvin/PropertyGridHelpers.git master
