--- a/.github/workflows/Update Submodule Reference.yml
+++ b/.github/workflows/Update Submodule Reference.yml
@@ -1,9 +1,9 @@
 name: Update Submodule Reference in PropertyGridHelpers
 
 on:
-  push:
-    branches:
-      - main  # Trigger on changes to the 'main' branch of PropertyGridHelpers.CodeCoverage
+#  push:
+#    branches:
+#      - main  # Trigger on changes to the 'main' branch of PropertyGridHelpers.CodeCoverage
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
