--- a/.github/workflows/trigger-dispatch.yml
+++ b/.github/workflows/trigger-dispatch.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main  # Or the branch you want to monitor
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  
 jobs:
   trigger-dispatch:
     runs-on: ubuntu-latest
